test/files/pos/t3772a.scala
object Test extends App {
  {
    class C(val x: Int = 2)
    object C
  }
}
