test/files/neg/macro-override-macro-overrides-abstract-method-a/Test_2.scala
object Test extends App {
  val designator: Macros.type = Macros
  designator.foo(42)
}